--- a/Unity/Packages/com.et.statesync/package.json
+++ b/Unity/Packages/com.et.statesync/package.json
@@ -14,22 +14,22 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "com.et.core": "",
-    "com.et.yooassets": "",
-    "com.et.loader": "",
-    "com.et.demores": "",
-    "com.unity.mathematics": "1.2.6",
-    "com.et.router": "",
-    "com.et.console": "",
-    "com.et.unit": "",
-    "com.et.http": "",
-    "com.et.recast": "",
-    "com.et.numeric": "",
-    "com.et.move": "",
-    "com.et.watcher": "",
-    "com.et.db": "",
-    "com.et.aoi": "",
-    "com.et.ui": "",
-    "com.et.referencecollector": ""
+    "com.et.core": "0.0.1",
+    "com.et.yooassets": "0.0.1",
+    "com.et.loader": "0.0.1",
+    "com.et.demores": "0.0.1",
+    "com.et.mathematics": "0.0.1",
+    "com.et.router": "0.0.1",
+    "com.et.console": "0.0.1",
+    "com.et.unit": "0.0.1",
+    "com.et.http": "0.0.1",
+    "com.et.recast": "0.0.1",
+    "com.et.numeric": "0.0.1",
+    "com.et.move": "0.0.1",
+    "com.et.watcher": "0.0.1",
+    "com.et.db": "0.0.1",
+    "com.et.aoi": "0.0.1",
+    "com.et.ui": "0.0.1",
+    "com.et.referencecollector": "0.0.1"
   }
 }
