修复一个SourceGenerator不生效的问题，SourceGenerator的dll如果放在一个Ignore的asmdef下，将不会生效

--- a/Share/SourceGenerator/ET.SourceGenerator.csproj
+++ b/Share/SourceGenerator/ET.SourceGenerator.csproj
@@ -32,7 +32,7 @@
     </ItemGroup>
 
 <!--    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Packages/com.et.core/Plugins/" ContinueOnError="false" />
+        <Copy SourceFiles="$(TargetDir)/$(TargetName).dll" DestinationFolder="$(ProjectDir)/../../Unity/Packages/com.et.sourcegenerator/" ContinueOnError="false" />
     </Target>-->
 
 </Project>
