--- a/Unity/Packages/com.et.core/package.json
+++ b/Unity/Packages/com.et.core/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "com.et.scripts": "0.0.1",
     "com.et.excel": "0.0.1",
-    "com.et.proto": "0.0.1"
+    "com.et.proto": "0.0.1",
+    "com.et.sourcegenerator": "0.0.1"
   }
 }
