--- a/DotNet/Hotfix/ET.Hotfix.csproj
+++ b/DotNet/Hotfix/ET.Hotfix.csproj
@@ -51,6 +51,8 @@
         
     </ItemGroup>
     <ItemGroup>
+        <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.Analyzer\ET.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.SourceGenerator\ET.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Model\ET.Model.csproj" />
     </ItemGroup>
 
