--- a/Unity/Packages/cn.etetet.core/DotNet~/ET.Core/ET.Core.csproj
+++ b/Unity/Packages/cn.etetet.core/DotNet~/ET.Core/ET.Core.csproj
@@ -34,6 +34,9 @@
         <Compile Include="../../Runtime/**/*.cs" xmlns="">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
+
+        <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.Analyzer\ET.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.SourceGenerator\ET.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
     
     <ItemGroup>
