--- a/Unity/Packages/cn.etetet.sourcegenerator/DotNet~/ET.Analyzer/ET.Analyzer.csproj
+++ b/Unity/Packages/cn.etetet.sourcegenerator/DotNet~/ET.Analyzer/ET.Analyzer.csproj
@@ -26,7 +26,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="../../Runtime/Helper/StringHashHelper.cs" />
+        <Compile Include="../StringHashHelper.cs" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.1" PrivateAssets="all" />
