1.SourceGenerator利用msbuild的元数据判断是dotnet core还是unity工程 2.分析器unity使用dll，不再直接引用dotnet工程

--- a/DotNet/Hotfix/ET.Hotfix.csproj
+++ b/DotNet/Hotfix/ET.Hotfix.csproj
@@ -55,5 +55,10 @@
         <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.SourceGenerator\ET.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Model\ET.Model.csproj" />
     </ItemGroup>
+    
+    <!-- sourcegenerator use -->
+    <ItemGroup>
+        <CompilerVisibleProperty Include="DotNetAssembly" />
+    </ItemGroup>
 
 </Project>
