--- a/Unity/Packages/cn.etetet.loader/DotNet~/Model/ET.Model.csproj
+++ b/Unity/Packages/cn.etetet.loader/DotNet~/Model/ET.Model.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework> 
+        <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>ET</RootNamespace>
         <LangVersion>12</LangVersion>
-        <AssemblyName>ET.Hotfix</AssemblyName>
+        <AssemblyName>ET.Model</AssemblyName>
     </PropertyGroup>
     <PropertyGroup>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
@@ -12,53 +12,43 @@
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
         <DefineConstants>DOTNET</DefineConstants>
         <OutputPath>$(SolutionDir)Bin</OutputPath> 
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-        <NoWarn>0169,0649,3021,8981,CS9193,CS9192</NoWarn>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>DOTNET</DefineConstants>
-        <OutputPath>$(SolutionDir)Bin</OutputPath>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <Optimize>false</Optimize>
+        <NoWarn>0169,0649,3021,8981,CS9193,CS9192</NoWarn>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"> 
+        <DefineConstants>DOTNET</DefineConstants>
+        <OutputPath>$(SolutionDir)Bin</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <Optimize>true</Optimize>
         <NoWarn>0169,0649,3021,8981,CS9193,CS9192</NoWarn>
     </PropertyGroup>
     <ItemGroup>
-
-        <Compile Include="..\..\Unity\Library\PackageCache\cn.etetet.*\Scripts\Hotfix\Share\**\*.cs">
+        <Compile Include="$(SolutionDir)Unity\Packages\cn.etetet.*\Scripts\Model\Share\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Library\PackageCache\cn.etetet.*\Scripts\Hotfix\Server\**\*.cs">
+        <Compile Include="$(SolutionDir)Unity\Packages\cn.etetet.*\Scripts\Model\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Library\PackageCache\cn.etetet.*\CodeMode\Hotfix\Server\**\*.cs">
-            <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Packages\cn.etetet.*\Scripts\Hotfix\Share\**\*.cs">
-            <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Packages\cn.etetet.*\Scripts\Hotfix\Server\**\*.cs">
-            <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Packages\cn.etetet.*\CodeMode\Hotfix\Server\**\*.cs">
+        <Compile Include="$(SolutionDir)Unity\Packages\cn.etetet.*\CodeMode\Model\Server\**\*.cs">
             <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
         
-    </ItemGroup>
+    </ItemGroup> 
     <ItemGroup>
         <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.Analyzer\ET.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="$(SolutionDir)Unity\Packages\cn.etetet.sourcegenerator\DotNet~\ET.SourceGenerator\ET.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-        <ProjectReference Include="..\Model\ET.Model.csproj" />
+        <ProjectReference Include="..\..\..\cn.etetet.mathematics\DotNet~\ET.Mathematics.csproj" />
+        <ProjectReference Include="..\..\..\cn.etetet.recast\DotNet~\ET.Recast.csproj" />
+        <ProjectReference Include="..\Loader\ET.Loader.csproj" />
     </ItemGroup>
-    
+
     <!-- sourcegenerator use -->
     <ItemGroup>
         <CompilerVisibleProperty Include="DotNetAssembly" />
     </ItemGroup>
-
 </Project>
