把Model Hotfix ModelView HotfixView挪到StateSync中，假如放到Loader中，那么这些程序集引用会根据不同的demo引用的库有不同的变化，这样不太合理。上层的变化不应该导致下层的包有变化

--- a/Unity/Packages/cn.etetet.loader/DotNet~/App/ET.App.csproj
+++ b/Unity/Packages/cn.etetet.loader/DotNet~/App/ET.App.csproj
@@ -20,6 +20,10 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PublishTrimmed>false</PublishTrimmed>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>DOTNET</DefineConstants>
     <OutputPath>$(SolutionDir)Bin</OutputPath>
@@ -28,6 +32,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\ET.Model.csproj" />
+    <ProjectReference Include="..\..\..\cn.etetet.statesync\DotNet~\Model\ET.Model.csproj" />
+    <ProjectReference Include="..\Loader\ET.Loader.csproj" />
   </ItemGroup>
 </Project>
