给Package加上git依赖，因为UnityPackage并没有处理git Package依赖，所以这些要自己处理 处理的方法就是在Package.json中加个gitDependencies来描述git包的路径

--- a/Unity/Packages/cn.etetet.actorlocation/package.json
+++ b/Unity/Packages/cn.etetet.actorlocation/package.json
@@ -15,5 +15,8 @@
   "relatedPackages": {},
   "dependencies": {
     "cn.etetet.core": "0.0.1"
+  },
+  "gitDependencies": {
+    "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1"
   }
 }
