--- a/Unity/Packages/cn.etetet.loader/package.json
+++ b/Unity/Packages/cn.etetet.loader/package.json
@@ -16,5 +16,9 @@
   "dependencies": {
     "cn.etetet.core": "0.0.1",
     "cn.etetet.yooassets": "0.0.1"
+  },
+  "gitDependencies": {
+    "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1",
+    "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1"
   }
 }
