Package目录的csproj不能忽略

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ Bundles
 Library
 Logs
 UserSettings
-*.csproj
+/*.csproj
 *.vsconfig
 ProjectSettings/RiderScriptEditorPersistedState.asset
 HybridCLRData
