--- a/Packages/cn.etetet.demores/package.json
+++ b/Packages/cn.etetet.demores/package.json
@@ -12,7 +12,5 @@
     "type": "git",
     "url": "https://github.com/egametang/ET"
   },
-  "relatedPackages": {},
-  "dependencies": {
-  }
+  "relatedPackages": {}
 }
