git依赖工具在core包中，core包应该是最先下载的包，所以core包不能git依赖任何其它git包

--- a/Packages/cn.etetet.loader/package.json
+++ b/Packages/cn.etetet.loader/package.json
@@ -15,6 +15,9 @@
   "relatedPackages": {},
   "gitDependencies": {
     "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1",
-    "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1"
+    "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1",
+    "cn.etetet.excel": "https://github.com/ET-Packages/cn.etetet.excel.git#0.0.1",
+    "cn.etetet.proto": "https://github.com/ET-Packages/cn.etetet.proto.git#0.0.1",
+    "cn.etetet.sourcegenerator": "https://github.com/ET-Packages/cn.etetet.sourcegenerator.git#0.0.1"
   }
 }
