--- a/Packages/cn.etetet.yooassets/package.json
+++ b/Packages/cn.etetet.yooassets/package.json
@@ -14,7 +14,7 @@
   },
   "relatedPackages": {},
   "dependencies": {
-    "com.tuyoogame.yooasset": "2.1.1",
+    "com.tuyoogame.yooasset": "2.1.1"
   },
   "gitDependencies": {
     "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1"
