git链接先改成ET项目相对路径，方便测试

--- a/Packages/cn.etetet.loader/package.json
+++ b/Packages/cn.etetet.loader/package.json
@@ -14,10 +14,10 @@
   },
   "relatedPackages": {},
   "gitDependencies": {
-    "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1",
-    "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1",
-    "cn.etetet.excel": "https://github.com/ET-Packages/cn.etetet.excel.git#0.0.1",
-    "cn.etetet.proto": "https://github.com/ET-Packages/cn.etetet.proto.git#0.0.1",
-    "cn.etetet.sourcegenerator": "https://github.com/ET-Packages/cn.etetet.sourcegenerator.git#0.0.1"
+    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core#develop",
+    "cn.etetet.yooassets": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.yooassets#develop",
+    "cn.etetet.excel": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.excel#develop",
+    "cn.etetet.proto": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.proto#develop",
+    "cn.etetet.sourcegenerator": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.sourcegenerator#develop"
   }
 }
