--- a/Packages/cn.etetet.actorlocation/package.json
+++ b/Packages/cn.etetet.actorlocation/package.json
@@ -14,6 +14,6 @@
   },
   "relatedPackages": {},
   "gitDependencies": {
-    "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1"
+    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core.git#develop"
   }
 }
