--- a/Packages/cn.etetet.loader/package.json
+++ b/Packages/cn.etetet.loader/package.json
@@ -14,10 +14,7 @@
   },
   "relatedPackages": {},
   "gitDependencies": {
-    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core#develop",
-    "cn.etetet.yooassets": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.yooassets#develop",
-    "cn.etetet.excel": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.excel#develop",
-    "cn.etetet.proto": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.proto#develop",
-    "cn.etetet.sourcegenerator": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.sourcegenerator#develop"
-  }
+    "hybridclr": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
+    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core#develop"
+    }
 }
