--- a/Packages/cn.etetet.statesync/package.json
+++ b/Packages/cn.etetet.statesync/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cn.etetet.statesync",
   "displayName": "ET.StateSync",
-  "version": "develop",
+  "version": "0.0.1",
   "unity": "2022.3",
   "description": "et statesync",
   "author": {
