--- a/Packages/cn.etetet.loader/package.json
+++ b/Packages/cn.etetet.loader/package.json
@@ -15,6 +15,7 @@
   "relatedPackages": {},
   "gitDependencies": {
     "hybridclr": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
-    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core#develop"
+    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core#develop",
+    "cn.etetet.yooassets": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.yooassets#develop"
     }
 }
