1.调整DependencyResolver脚本，修复一些bug 2.注意这里cn.etetet.yooassets包，这个包依赖了yooassets，而yooassets需要添加新的注册表，所以在下载依赖之前要先把注册表加上，否则cn.etetet.yooassets包也会无法下载

--- a/Packages/cn.etetet.init/Editor/ET.Init.Editor.asmdef
+++ b/Packages/cn.etetet.init/Editor/ET.Init.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ET.GitResolver.Editor",
+    "name": "ET.Init.Editor",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
