--- a/Packages/cn.etetet.statesync/package.json
+++ b/Packages/cn.etetet.statesync/package.json
@@ -14,22 +14,22 @@
   },
   "relatedPackages": {},
   "gitDependencies": {
-    "cn.etetet.core": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.core.git#develop",
-    "cn.etetet.yooassets": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.yooassets.git#develop",
-    "cn.etetet.loader": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.loader.git#develop",
-    "cn.etetet.demores": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.demores.git#develop",
-    "cn.etetet.mathematics": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.mathematics.git#develop",
-    "cn.etetet.router": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.router.git#develop",
-    "cn.etetet.console": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.console.git#develop",
-    "cn.etetet.unit": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.unit.git#develop",
-    "cn.etetet.http": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.http.git#develop",
-    "cn.etetet.recast": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.recast.git#develop",
-    "cn.etetet.numeric": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.numeric.git#develop",
-    "cn.etetet.move": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.move.git#develop",
-    "cn.etetet.watcher": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.watcher.git#develop",
-    "cn.etetet.db": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.db.git#develop",
-    "cn.etetet.aoi": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.aoi.git#develop",
-    "cn.etetet.ui": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.ui.git#develop",
-    "cn.etetet.referencecollector": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.referencecollector.git#develop"
+    "cn.etetet.core": "https://github.com/ET-Packages/cn.etetet.core.git#0.0.1",
+    "cn.etetet.yooassets": "https://github.com/ET-Packages/cn.etetet.yooassets.git#0.0.1",
+    "cn.etetet.loader": "https://github.com/ET-Packages/cn.etetet.loader.git#0.0.1",
+    "cn.etetet.demores": "https://github.com/ET-Packages/cn.etetet.demores.git#0.0.1",
+    "cn.etetet.mathematics": "https://github.com/ET-Packages/cn.etetet.mathematics.git#0.0.1",
+    "cn.etetet.router": "https://github.com/ET-Packages/cn.etetet.router.git#0.0.1",
+    "cn.etetet.console": "https://github.com/ET-Packages/cn.etetet.console.git#0.0.1",
+    "cn.etetet.unit": "https://github.com/ET-Packages/cn.etetet.unit.git#0.0.1",
+    "cn.etetet.http": "https://github.com/ET-Packages/cn.etetet.http.git#0.0.1",
+    "cn.etetet.recast": "https://github.com/ET-Packages/cn.etetet.recast.git#0.0.1",
+    "cn.etetet.numeric": "https://github.com/ET-Packages/cn.etetet.numeric.git#0.0.1",
+    "cn.etetet.move": "https://github.com/ET-Packages/cn.etetet.move.git#0.0.1",
+    "cn.etetet.watcher": "https://github.com/ET-Packages/cn.etetet.watcher.git#0.0.1",
+    "cn.etetet.db": "https://github.com/ET-Packages/cn.etetet.db.git#0.0.1",
+    "cn.etetet.aoi": "https://github.com/ET-Packages/cn.etetet.aoi.git#0.0.1",
+    "cn.etetet.ui": "https://github.com/ET-Packages/cn.etetet.ui.git#0.0.1",
+    "cn.etetet.referencecollector": "https://github.com/ET-Packages/cn.etetet.referencecollector.git#0.0.1"
   }
 }
