--- a/Packages/cn.etetet.core/package.json
+++ b/Packages/cn.etetet.core/package.json
@@ -15,8 +15,8 @@
   "relatedPackages": {},
   "gitDependencies": {
     "memorypack": "https://github.com/Cysharp/MemoryPack.git?path=src/MemoryPack.Unity/Assets/Plugins/MemoryPack#1.10.0",
-    "cn.etetet.excel": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.excel#develop",
-    "cn.etetet.proto": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.proto#develop",
-    "cn.etetet.sourcegenerator": "https://github.com/egametang/ET.git?path=Packages/cn.etetet.sourcegenerator#develop"
+    "cn.etetet.excel": "https://github.com/ET-Packages/cn.etetet.excel.git#0.0.1",
+    "cn.etetet.proto": "https://github.com/ET-Packages/cn.etetet.proto.git#0.0.1",
+    "cn.etetet.sourcegenerator": "https://github.com/ET-Packages/cn.etetet.sourcegenerator.git#0.0.1"
   }
 }
