从Core Loader中挪了部分功能过来，编辑器包没下载好的时候，这些功能就必须存在

--- a/Packages/cn.etetet.init/Editor/ET.Init.Editor.asmdef
+++ b/Packages/cn.etetet.init/Editor/ET.Init.Editor.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "ET.Init.Editor",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "ET.Init"
+    ],
     "includePlatforms": [
         "Editor"
     ],
