--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -44,6 +44,13 @@
       "scopes": [
         "com.tuyoogame.yooasset"
       ]
+    },
+    {
+      "name": "ET-Packages",
+      "url": "https://npm.pkg.github.com/@ET-Packages",
+      "scopes": [
+        "cn.etetet"
+      ]
     }
   ]
 }
