修复com.etetet.init包名

--- a/Packages/com.etetet.init/package.json
+++ b/Packages/com.etetet.init/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cn.etetet.init",
+  "name": "com.etetet.init",
   "displayName": "ET.Init",
   "version": "0.0.1",
   "unity": "2022.3",
